gitops/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-platform-service
  namespace: devops-platform
spec:
  selector:
    app: devops-platform
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30080
  type: NodePort
