gitops/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: devops-platform-ingress
  namespace: devops-platform

spec:
  ingressClassName: traefik

  rules:
    - host: devops.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: devops-platform-service
                port:
                  number: 5000
